feat: add password gate for private development
- Added gate.html with password protection
- Renamed index.html to home.html
- All pages now check auth before loading
- Added noindex meta tags
- Password: capy2026 (for dev only)

--- a/architecture.html
+++ b/architecture.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+    <meta name="robots" content="noindex, nofollow">
+    <script>if(localStorage.getItem("capygator_auth")!=="true")window.location.href="gate.html";</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Architecture - CAPYGATOR BI</title>
