chore: update gate password

--- a/gate.html
+++ b/gate.html
@@ -101,7 +101,7 @@
 
     <script>
         // Simple gate - not secure, just keeps casual visitors out
-        const HASH = 'c83b25fa599cfe7fa85ce82d3784bafe03b228d98d1d756a014210ea712c4524'; // sha256 of 'capy2026'
+        const HASH = '29f1b4d9a5afe6385262f61ffa24e98cded0d3c0557b7e01889adbd41ebd65fe';
         
         if (localStorage.getItem('capygator_auth') === 'true') {
             window.location.href = 'home.html';
