fix: update contact email to info@capygator.com

--- a/home.html
+++ b/home.html
@@ -669,7 +669,7 @@
                 Projekt im Kopf? Fragen zu Power BI, Fabric oder Open Source? 
                 Schreib mir — Antwort innerhalb von 24h.
             </p>
-            <a href="mailto:hello@capygator.com" class="contact-email">hello@capygator.com</a>
+            <a href="mailto:info@capygator.com" class="contact-email">info@capygator.com</a>
         </div>
     </section>
 
