Switch terminal pages to Fragment Mono font

--- a/home.html
+++ b/home.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAPYGATOR — Premium Data Engineering</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
     <meta name="description" content="End-to-End Datenplattformen. Power BI, Microsoft Fabric, Open Data Stacks. Höchste Qualitätsstandards.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
