--- a/impressum.html
+++ b/impressum.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impressum - CAPYGATOR</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -14,7 +17,7 @@
         body {
             background: #0a0a0a;
             color: #00ff88;
-            font-family: 'Courier New', monospace;
+            font-family: 'Fragment Mono', 'Courier New', monospace;
             line-height: 1.6;
             overflow-x: hidden;
         }
