--- a/gate.html
+++ b/gate.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
     <title>CAPYGATOR - Coming Soon</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             background: #0a0a0a;
             color: #00ff88;
-            font-family: 'Courier New', monospace;
+            font-family: 'Fragment Mono', 'Courier New', monospace;
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -50,7 +53,7 @@
             border: 1px solid #333;
             border-radius: 6px;
             color: #00ff88;
-            font-family: 'Courier New', monospace;
+            font-family: 'Fragment Mono', 'Courier New', monospace;
             font-size: 1rem;
             margin-bottom: 15px;
         }
@@ -66,7 +69,7 @@
             color: #000;
             border: none;
             border-radius: 6px;
-            font-family: 'Courier New', monospace;
+            font-family: 'Fragment Mono', 'Courier New', monospace;
             font-size: 1rem;
             cursor: pointer;
             transition: all 0.3s ease;
