--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="robots" content="noindex, nofollow">
     <title>CAPYGATOR</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script>
         if (localStorage.getItem('capygator_auth') !== 'true') {
             window.location.href = 'gate.html';
