Refocus messaging: tool-agnostic value props, ownership positioning

--- a/home.html
+++ b/home.html
@@ -5,11 +5,11 @@
     <script>if(localStorage.getItem("capygator_auth")!=="true")window.location.href="gate.html";</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CAPYGATOR — Premium Data Engineering</title>
+    <title>CAPYGATOR — Datenplattformen mit Ownership</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <meta name="description" content="End-to-End Datenplattformen. Power BI, Microsoft Fabric, Open Data Stacks. Höchste Qualitätsstandards.">
+    <meta name="description" content="Datenplattformen, die dein Team versteht, kontrolliert und gerne nutzt. Enablement statt Abhängigkeit. 20 Jahre Erfahrung.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -498,11 +498,11 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <div class="hero-badge">Premium Data Engineering</div>
-                <h1>Datenplattformen,<br><span class="gradient">die performen.</span></h1>
+                <div class="hero-badge">20 Jahre Data Engineering</div>
+                <h1>Datenplattformen, die dein Team<br><span class="gradient">versteht, kontrolliert und nutzt.</span></h1>
                 <p class="hero-sub">
-                    End-to-End Implementierung von Power BI, Microsoft Fabric und 
-                    Open Data Stacks. 20 Jahre Erfahrung. Höchste Qualitätsstandards.
+                    Enablement statt Abhängigkeit. Kein Vendor-Lock, keine Blackbox — 
+                    von der ersten Frage bis zur Ownership-Übergabe.
                 </p>
                 <div class="hero-cta">
                     <a href="#contact" class="btn btn-primary">Projekt besprechen</a>
