Remove 20 years mention from hero

--- a/home.html
+++ b/home.html
@@ -502,7 +502,7 @@
                 <h1>Datenplattformen,<br><span class="gradient">die performen.</span></h1>
                 <p class="hero-sub">
                     End-to-End Implementierung von Power BI, Microsoft Fabric und 
-                    Open Data Stacks. 20 Jahre Erfahrung. Höchste Qualitätsstandards.
+                    Open Data Stacks. Höchste Qualitätsstandards.
                 </p>
                 <div class="hero-cta">
                     <a href="#contact" class="btn btn-primary">Projekt besprechen</a>
