Update logo to v2, add logo to gate page

--- a/gate.html
+++ b/gate.html
@@ -90,7 +90,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="emoji">🦫🐊</div>
+        <img src="capygator_logo.png" alt="CAPYGATOR Logo" style="width: 120px; margin-bottom: 20px;">
         <h1>CAPYGATOR</h1>
         <p class="tagline">Premium Data Engineering — Coming Soon</p>
         
