--- a/gate.html
+++ b/gate.html
@@ -90,7 +90,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="capygator_logo.png" alt="CAPYGATOR Logo" style="width: 120px; margin-bottom: 20px;">
+        <img src="capygator_logo.png" alt="CAPYGATOR Logo" style="width: 280px; margin-bottom: 30px; border-radius: 16px; mix-blend-mode: lighten;">
         <h1>CAPYGATOR</h1>
         <p class="tagline">Premium Data Engineering — Coming Soon</p>
         
